--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Iachi Dimitri <iachi.dimitri@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "capacitor-set-version": "^2.2.0",
     "chalk": "^5.2.0",
     "child_process": "^1.0.2",
     "commander": "^10.0.1",
